--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tabler/icons-react": "^2.44.0",
     "hamburger-react": "^2.5.0",
     "primereact": "^10.2.1",
     "react": "^18.2.0",
